2007-03-09  Darin Adler  <darin@apple.com>

        Reviewed by Justin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=8928
          <rdar://problem/5045708> REPRODUCIBLE ASSERT: Cannot paste HTML into a
          contenteditable region in an XHTML document (8928)

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _hasHTMLDocument]): Added.
        (-[WebHTMLView _documentFragmentFromPasteboard:forType:inContext:subresources:]):
        Don't call AppKit's conversion from the DOM to an attributed string if the document
        is not an HTML document, to work around an AppKit limitation (Radar 5052390).

2007-03-09  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.

2007-03-08  Mark Rowe  <mrowe@apple.com>

        Reviewed by Tim Hatcher.

        <rdar://problem/5051616> Mouse clicks and movement are ignored in HIWebView on 64-bit

        Mouse events are not being handled correctly as GetControlKind is returning an error
        on 64-bit.  The more modern HIObjectIsOfClass behaves correctly for this use.

        * Carbon/HIWebView.m:
        (HIWebViewDestructor):
        (WindowHandler): Use HIObjectIsOfClass in place of GetControlKind.
        (HIWebViewEventHandler): Don't leak the NSEvent.

2007-03-08  Bruce Q Hammond  <bruceq@apple.om>

        Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=13009
        Console spews "CGContextGetType: invalid context" non-stop on web site

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        (-[WebBaseNetscapePluginView restorePortState:]):

2007-03-08  Mark Rowe  <mrowe@apple.com>

        Reviewed by Tim Hatcher.

        <rdar://problem/4561772> HIWebView does not exist for 64-bit

        Update HIWebView and friends to work without QuickDraw.

        Changes are gleaned from the 64-bit support inside HICocoaView.  The main